--- a/client/src/components/TableOfContents.css
+++ b/client/src/components/TableOfContents.css
@@ -18,7 +18,7 @@
   }
 
   h2, h3 {
-    scroll-margin-top: 16px;
+    scroll-margin-top: 76px;
 }
 
 .heading2 {
